--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 data_dsmarket/daily_calendar_with_events.csv
 data_dsmarket/item_prices.csv
 data_dsmarket/item_sales.csv
+data_dsmarket/merged_data_for_power_bi.csv.gz
