--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ data_dsmarket/daily_calendar_with_events.csv
 data_dsmarket/item_prices.csv
 data_dsmarket/item_sales.csv
 data_dsmarket/merged_data_for_power_bi.csv.gz
+data_dsmarket/merged_data_for_power_bi.csv
