modifico gitignore; añado extraccion de csv para power bi sin nulos

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ data_dsmarket/item_prices.csv
 data_dsmarket/item_sales.csv
 data_dsmarket/merged_data_for_power_bi.csv.gz
 data_dsmarket/merged_data_for_power_bi.csv
+data_dsmarket/merged_data_for_power_bi_2.csv.gz
+data_dsmarket/merged_data_for_power_bi_2.csv
