--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ data_dsmarket/merged_data_for_power_bi_2.csv
 data_dsmarket/weekly_data_for_power_bi.csv
 Data_for_Power_BI/daily_calendar_with_expanded_events.csv
 Data_for_Power_BI/weekly_data_for_power_bi.csv
+df_weekly_final_features_engineered.csv
