modified gitignore and first_steps for extracting df for prediction

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ data_dsmarket/weekly_data_for_power_bi.csv
 Data_for_Power_BI/daily_calendar_with_expanded_events.csv
 Data_for_Power_BI/weekly_data_for_power_bi.csv
 df_weekly_final_features_engineered.csv
+data_dsmarket/df_for_prediction.csv
